Changed the whole group structure, mixed with conv
